IF(WIN32)

OPTION(MITK_USE_US_TERASON_SDK "Enable support for Terason api devices" OFF)

IF(MITK_USE_US_TERASON_SDK)

IF(CMAKE_CL_64)
  message( FATAL_ERROR "The Terason API cannot be used in 64 bit builds. Please configure a 32 bit build instead or deactivate MITK_USE_US_TERASON_SDK." )
ENDIF(CMAKE_CL_64)

SET(MITK_US_TERASON_SDK_PATH "" CACHE PATH "Path to Terason SDK header files.")

MITK_CREATE_MODULE(
  SUBPROJECTS
  DEPENDS MitkUS
  PACKAGE_DEPENDS UltrasoundEngine
  INCLUDE_DIRS "${MITK_US_TERASON_SDK_PATH}"
  INTERNAL_INCLUDE_DIRS ${INCLUDE_DIRS_INTERNAL}
  AUTOLOAD_WITH MitkUS
)

ENDIF(MITK_USE_US_TERASON_SDK)

ENDIF(WIN32)
